--- a/index.html
+++ b/index.html
@@ -41,15 +41,6 @@
 
     gtag('config', 'UA-169007209-3');
   </script>
-
-
-
-  <!-- =======================================================
-  * Template Name: Personal - v2.1.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -271,7 +262,7 @@
               <img src="assets/img/cisco.jpg" alt="" class="certification-img">
               <div class="certification-info">
                 <h4><a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate">
-                  Cisco Python Essentials I&II
+                  Cisco Python Essentials
                 </a></h4>
               </div>
             </div>
@@ -307,12 +298,11 @@
           <div class="col-lg-12" data-aos="fade-up">
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
               <h4 style="text-align:left;"><a href="#" style="color:#12d640">PRODIGY INFOTECH</a><br></h4>
-              <h5 style="text-align:left;">November 2023 - December 2023</h5>
+              <h5 style="text-align:left;">November - December 2023</h5>
               <p style="text-align:left;color:rgb(17, 185, 246);font-size: large;"><em>Web Developer Intern</em></p>
               <ul style="text-align:left;">
                 <li>Leveraged HTML, CSS, and JavaScript to enhance site usability and aesthetics, directly improving client satisfaction.</li>
-                <li>Collaborated on API integration and optimized SEO, resulting in a 30% productivity boost.</li>
-                <li>Adopted agile practices in code reviews and sprint planning, enhancing team efficiency.</li>
+                <li>Collaborated on API integration and optimized SEO, resulting in a productivity boost.</li>
                 <li>Awarded a letter of recommendation for outstanding creativity and attention to detail.</li>
               </ul>
             </div>
@@ -328,6 +318,10 @@
                 <p style="text-align:left;color:#fff"><em>Academics : CGPA - 9.41 </em></p>
                 <ul style="text-align:left;">
                   <li>Awarded the 'Medal of Merit' for consistent academic excellence throughout the Engineering program, demonstrating exceptional prowess in technical disciplines and innovative problem-solving skills.</li>
+                </ul>
+                <p style="text-align:left;color:#fff"><em>GLC Global Hackathon</em></p>
+                <ul style="text-align:left;">
+                  <li>Represented my college in Generative AI hackathon by GLC & HP</li>
                 </ul>
                 <p style="text-align:left;color:#fff"><em>Research and publications</em></p>
                 <ul style="text-align:left;">
