--- a/index.html
+++ b/index.html
@@ -474,9 +474,9 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">Python Libraries : </h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-ar21.svg" alt="vectorlogo.zone" style="margin-right: 10px;">
-                  <img src="https://www.vectorlogo.zone/logos/pytorch/pytorch-ar21.svg" alt="vectorlogo.zone" style="margin-right: 10px;">
-                  <img src="https://www.vectorlogo.zone/logos/opencv/opencv-ar21.svg" alt="vectorlogo.zone" style="margin-right: 10px;">
+                  <img src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-ar21.svg" alt="vectorlogo.zone" height="60" width="90" style="margin-right: 10px;">
+                  <img src="https://www.vectorlogo.zone/logos/pytorch/pytorch-ar21.svg" alt="vectorlogo.zone" height="50" width="90"style="margin-right: 10px;">
+                  <img src="https://www.vectorlogo.zone/logos/opencv/opencv-ar21.svg" alt="vectorlogo.zone" height="70" width="90" style="margin-right: 10px;">
                   <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg" alt="upload.wikimedia.org" width="70" height="60" style="margin-right: 10px;">
 
                 </p>
@@ -486,7 +486,7 @@
               <h4 style="text-align:left;color:#09203a">Tools</h4>
                 <p style="text-align:left; row-gap: 10px;">
                   
-                  <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" height="50" width="70" alt="vectorlogo.zone" style="margin-right: 10px;">
+                  <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" height="50" width="80" alt="vectorlogo.zone" style="margin-right: 10px;">
                   <img src="https://www.vectorlogo.zone/logos/github/github-tile.svg" height="36" width="36" alt="vectorlogo.zone" style="margin-right: 10px;">
                   <img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/aws-dark.svg" width="36" height="36" alt="AWS" style="margin-right: 10px;"/>
   <img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/googlecloud-colored.svg" width="36" height="36" alt="Google Cloud" style="margin-right: 10px;"/>
