--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             </div>
             
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
-              <h4 style="text-align:left;color:#09203a">Web Frameworks and Backend Tools : </h4>
+              <h4 style="text-align:left;color:#09203a">Web Frameworks & Backend Tools: </h4>
                 <p style="text-align:left;">
                   <img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/react-colored.svg" width="36" height="36" alt="React" style="margin-right: 10px;"/>
   <img src="https://www.vectorlogo.zone/logos/tailwindcss/tailwindcss-icon.svg" width="36" height="36" alt="Tailwind" />
@@ -521,7 +521,7 @@
            </div>
 
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
-              <h4 style="text-align:left;color:#09203a">Tools</h4>
+              <h4 style="text-align:left;color:#09203a">Support tech :</h4>
                 <p style="text-align:left; row-gap: 10px;">
                   
                   <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" height="50" width="80" alt="vectorlogo.zone" style="margin-right: 10px;">
