--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div class="certification-item">
               <img src="assets/img/aws.png" alt="" class="certification-img">
               <div class="certification-info">
-                <h4><a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate">
+                <h4><a href="https://www.credly.com/badges/eb97ed8f-9bbb-414a-b00b-c3f59b6a03b2/public_url" target="_blank" title="Certificate">
                   AWS Cloud Foundations
                 </a></h4>
               </div>
@@ -243,7 +243,7 @@
             <div class="certification-item">
               <img src="assets/img/deep.png" alt="" class="certification-img">
               <div class="certification-info">
-                <h4><a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate">
+                <h4><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/KK37SP24R7G5" target="_blank" title="Certificate">
                   Machine Learning specialization
                 </a></h4>
               </div>
@@ -252,7 +252,7 @@
             <div class="certification-item">
               <img src="assets/img/meta.png" alt="" class="certification-img">
               <div class="certification-info">
-                <h4><a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate">
+                <h4><a href="https://coursera.org/share/58a1bfc4ec9bf88d7fc9371270747c3e" target="_blank" title="Certificate">
                   Meta Frontend Dev Certificate
                 </a></h4>
               </div>
@@ -261,7 +261,7 @@
             <div class="certification-item">
               <img src="assets/img/Google-IT-Professional-Certificate-Logo.png" alt="" class="certification-img">
               <div class="certification-info">
-                <h4><a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate">
+                <h4><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BL8VVBMN29L3" target="_blank" title="Certificate">
                   Google IT Professional-Certificate
                 </a></h4>
               </div>
@@ -270,7 +270,7 @@
             <div class="certification-item">
               <img src="assets/img/cisco.jpg" alt="" class="certification-img">
               <div class="certification-info">
-                <h4><a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate">
+                <h4><a href="https://www.credly.com/badges/610ec1c8-28d5-49ba-979d-082df6f92791/linked_in_profile" target="_blank" title="Certificate">
                   Cisco Python Essentials I&II
                 </a></h4>
               </div>
@@ -279,7 +279,7 @@
             <div class="certification-item">
               <img src="https://www.vectorlogo.zone/logos/java/java-ar21.svg" alt="" class="certification-img">
               <div class="certification-info">
-                <h4><a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate">
+                <h4><a href="https://www.linkedin.com/in/gokulnath-v-2003g/details/certifications/1635548979677/single-media-viewer/?type=DOCUMENT&profileId=ACoAADld2XYBGFhWzJ7kBupPx5VyFa0-oEoA5wA" target="_blank" title="Certificate">
                   Java Foundations<br>by Infosys Springboard
                 </a></h4>
               </div>
