--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="social-links">
           <a href="https://www.linkedin.com/in/gokulnath-v-2003g" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.github.com/Coding-Devil" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:gokulnathvenkateshan821@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="mailto:gokulnathvwork@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
 
@@ -122,7 +122,7 @@
               <ul>
                 
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bengaluru, KA, India</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> gokulnathvenkateshan821@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> gokulnathv03@gmail.com</li>
               </ul>
             </div>
           </div>
