--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li><a href="#experience"> <span>Experience</span></a></li>
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="./Gokulnath Resume.pdf" target="_blank"> <span> Resume</span></a></li>
+          <li><a href="./Gokulnath_Resume.pdf" target="_blank"> <span> Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
