--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Web Developer", "Data Science Aspirant", "AI Enthusiast","Movie Geek","Sports addict"],
+      strings: ["Data Science Aspirant", "ML Engineer", "Cloud & Ai Enthusiast", "Web Developer", "Prompt Wizard","Sports & Movie geek"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 35
