--- a/index.html
+++ b/index.html
@@ -650,10 +650,10 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Data Science Aspirant", "ML Engineer", "Cloud & Ai Enthusiast", "Web Developer", "Prompt Wizard","Sports & Movie geek"],
+      strings: ["Data Science Aspirant", "ML Engineer", "Cloud and AI Enthusiast", "Web Developer", "Prompt Wizard","Sports and Movie geek"],
       loop: true,
-      typeSpeed: 65,
-      backSpeed: 35
+      typeSpeed: 45,
+      backSpeed: 25
     });
   </script>
 
